<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dip"
    tools:context=".About_Page">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="171dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dip"
        app:srcCompat="@drawable/me" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/matric"
        android:textColor="#171212"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-40dp"
        android:text="@string/myname"
        android:textColor="#171212"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-43dp"
        android:text="@string/uitm"
        android:textColor="#171212"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignEnd="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="-16dp"
        android:text="@string/copyright"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textView4"
        android:layout_alignBottom="@id/textView3"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-213dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/aboutbmi"
        android:textSize="18sp" />
</RelativeLayout>